# trustworthy-ai-monitor-fusion

./: .gitignore  Makefile  README.md  RESULTS.md  pyproject.toml  requirements.txt
artifacts/frozen_policies_v3/: frozen_policies.json
artifacts/fusion_models_v2/: cheap_router.joblib  frozen_operating_points.json  full_information_fusion.joblib  fusion_bundle.joblib  (+1 more)
docs/: dataset_plan.md  label_audit_protocol.md  monitor_plan.md  research_scope.md
notebooks/: score_learned_monitors_colab.md  score_qwen3guard_official_colab.md
reports/: stop_go_decision.md
requirements/: analysis.txt  data.in  data.txt  monitor_scoring.txt
results/: README.md
scripts/: analyze_monitor_diagnostics.py  apply_final_label_audit.py  audit_data_sources.py  build_repaired_score_cache.py  build_unified_dataset.py  evaluate_frozen_policies.py  evaluate_serialized_fusion_v2.py  freeze_selected_policies.py  import_compact_monitor_v2.py  inspect_attack_assets.py  inspect_source_datasets.py  prepare_label_validity_audit.py  regenerate_rule_scores_v2.py  reproduce_cpu_results.sh  run_nested_leave_group_out_v1.py  run_nested_ltt_risk_control_v1.py  run_policy_evaluation_v3.py  score_compact_monitor_colab_v2.py  score_learned_monitors_colab.py  score_qwen3guard_official_colab.py  score_rule_filter.py  select_baseline_policies.py  train_serialize_fusion_models_v2.py  train_serialize_fusion_models_v3.py  validate_completed_label_audit.py  verify_monitor_models.py  verify_reproducibility.py  write_stop_go_decision.py  write_stop_go_decision_v3.py
tests/: test_reproducibility.py
(+226 files in other folders)
